--- a/src/assets/scss/tailwind.scss
+++ b/src/assets/scss/tailwind.scss
@@ -4,6 +4,6 @@
 
 @layer components {
   .btn-primary {
-    @apply bg-green-500 hover:bg-green-400 px-8 py-3 rounded-md mx-2 transition-all duration-300 ease-in-out text-white;
+    @apply bg-green-500 hover:bg-green-400 px-8 py-3 rounded-md transition-all duration-300 ease-in-out text-white;
   }
 }
